# django-mapshader

./: MANIFEST.in  README.md  manage.py  pytest.ini  setup.cfg  setup.py
django_mapshader/: apps.py  urls.py  utils.py  views.py
django_mapshader/templates/: index.html  service_page.html
django_mapshader/tests/: test_geojson.py  test_image.py  test_tiles.py  test_wms.py  utils.py
integration/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_geojson.py  test_index.py  test_tiles.py  test_wms.py  urls.py
